Fix isometric grid with partial updates

Before this commit, isometric grid would drawn incorrectly
every time imageRect couldn't fit whole inside updateRect
(in case of zooming in on the cavas, for example, or after
partial updates implementation, also under the outline cursor).

This commit fixes that by making sure the drawing uses the
full imageRect for calculation.

BUG:427833
(cherry picked from commit f7390142e507893a7d212a55380ff84220540aab)